--- a/print.html
+++ b/print.html
@@ -443,7 +443,7 @@ document.addEventListener("DOMContentLoaded", function() {
             { name: "🔎 instanceToShares", flow: "", startNode: "ERC7540LikeDepositQueueBeaconFactory.instanceToShares"},
             { name: "🔎 getSharesForInstance", flow: "", startNode: "ERC7540LikeDepositQueueBeaconFactory.getSharesForInstance"},
             { name: "▶️ constructor", flow: "ERC7540LikeDepositQueueBeaconFactory_constructor", startNode: "ERC7540LikeDepositQueueBeaconFactory.constructor"},
-            { name: "▶️ ssetImplementation", flow: "", startNode: "ERC7540LikeDepositQueueBeaconFactory.setImplementation"},
+            { name: "▶️ setImplementation", flow: "", startNode: "ERC7540LikeDepositQueueBeaconFactory.setImplementation"},
             { name: "▶️ ddeployProxy", flow: "", startNode: "ERC7540LikeDepositQueueBeaconFactory.deployProxy"},
           ],
           // 8. SLOC  2076
@@ -474,7 +474,7 @@ document.addEventListener("DOMContentLoaded", function() {
             { name: "🔎 instanceToShares", flow: "", startNode: "ERC7540LikeRedeemQueueBeaconFactory.instanceToShares"},
             { name: "🔎 getSharesForInstance", flow: "", startNode: "ERC7540LikeRedeemQueueBeaconFactory.getSharesForInstance"},
             { name: "▶️ constructor", flow: "ERC7540LikeRedeemQueueBeaconFactory_constructor", startNode: "ERC7540LikeRedeemQueueBeaconFactory.constructor"},
-            { name: "▶️ ssetImplementation", flow: "", startNode: "ERC7540LikeRedeemQueueBeaconFactory.setImplementation"},
+            { name: "▶️ setImplementation", flow: "", startNode: "ERC7540LikeRedeemQueueBeaconFactory.setImplementation"},
             { name: "▶️ ddeployProxy", flow: "", startNode: "ERC7540LikeRedeemQueueBeaconFactory.deployProxy"},
           ],
           // 10. SLOC  2028
@@ -499,7 +499,7 @@ document.addEventListener("DOMContentLoaded", function() {
             { name: "🔎 instanceToShares", flow: "", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.instanceToShares"},
             { name: "🔎 getSharesForInstance", flow: "", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.getSharesForInstance"},
             { name: "▶️ constructor", flow: "ContinuousFlatRateManagementFeeTrackerBeaconFactory_constructor", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.constructor"},
-            { name: "▶️ ssetImplementation", flow: "", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.setImplementation"},
+            { name: "▶️ setImplementation", flow: "", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.setImplementation"},
             { name: "▶️ ddeployProxy", flow: "", startNode: "ContinuousFlatRateManagementFeeTrackerBeaconFactory.deployProxy"},
           ],
           // 12.  SLOC 772
@@ -561,12 +561,12 @@ document.addEventListener("DOMContentLoaded", function() {
             { name: "🔎 instanceToShares", flow: "", startNode: "AccountERC20TrackerBeaconFactory.instanceToShares"},
             { name: "🔎 getSharesForInstance", flow: "", startNode: "AccountERC20TrackerBeaconFactory.getSharesForInstance"},
             { name: "▶️ constructor", flow: "AccountERC20TrackerBeaconFactory_constructor", startNode: "AccountERC20TrackerBeaconFactory.constructor"},
-            { name: "▶️ ssetImplementation", flow: "", startNode: "AccountERC20TrackerBeaconFactory.setImplementation"},
-            { name: "▶️ ddeployProxy", flow: "", startNode: "AccountERC20TrackerBeaconFactory.deployProxy"},
+            { name: "▶️ setImplementation", flow: "", startNode: "AccountERC20TrackerBeaconFactory.setImplementation"},
+            { name: "▶️ deployProxy", flow: "", startNode: "AccountERC20TrackerBeaconFactory.deployProxy"},
           ],
           // 18. SLOC  1304
           "AccountERC20Tracker": [
-            { name: "🔎 SHARES", flow: "", startNode: "AccountERC21Tracker.SHARES"},
+            { name: "🔎 SHARES", flow: "", startNode: "AccountERC20Tracker.SHARES"},
             { name: "🔎 getAccount", flow: "", startNode: "AccountERC20Tracker.getAccount"},
             { name: "🔎 getAssets", flow: "", startNode: "AccountERC20Tracker.getAssets"},
             { name: "🔎 getPositionValue", flow: "", startNode: "AccountERC20Tracker.getPositionValue"},
@@ -583,7 +583,7 @@ document.addEventListener("DOMContentLoaded", function() {
             { name: "🔎 instanceToShares", flow: "", startNode: "LinearCreditDebtTrackerBeaconFactory.instanceToShares"},
             { name: "🔎 getSharesForInstance", flow: "", startNode: "LinearCreditDebtTrackerBeaconFactory.getSharesForInstance"},
             { name: "▶️ constructor", flow: "LinearCreditDebtTrackerBeaconFactory_constructor", startNode: "LinearCreditDebtTrackerBeaconFactory.constructor"},
-            { name: "▶️ ssetImplementation", flow: "", startNode: "LinearCreditDebtTrackerBeaconFactory.setImplementation"},
+            { name: "▶️ setImplementation", flow: "", startNode: "LinearCreditDebtTrackerBeaconFactory.setImplementation"},
             { name: "▶️ ddeployProxy", flow: "", startNode: "LinearCreditDebtTrackerBeaconFactory.deployProxy"},
           ],
           // 20. SLOC  808
